# wellnessbox-rnd

./: .env.example  .gitignore  AGENTS.md  NEXT_STEPS.md  PROGRESS.md  README.md  SESSION_HANDOFF.md  TIPS 연구개발계획서 Markdown 정리본.md  pyproject.toml
apps/inference_api/: __init__.py  main.py
data/catalog/: ingredients.json
data/frozen_eval/: README.md  frozen_eval_v1.jsonl  sample_cases.jsonl
scripts/: build_runtime_knowledge_db.py  compare_combined_override_modes.py  compare_effect_artifact_replay.py  compare_policy_artifact_replay.py  generate_synthetic_longitudinal.py  generate_synthetic_longitudinal_v2.py  generate_synthetic_longitudinal_v3.py  generate_synthetic_longitudinal_v4.py  ingest_raw_references.py  manage_eval_dataset.py  query_runtime_knowledge.py  run_closed_loop_batch_simulation.py  run_closed_loop_simulation.py  run_eval.py  train_effect_model_v1.py  train_effect_model_v2.py  train_effect_model_v3.py  train_efficacy_model_v0.py  train_policy_model_v0.py  train_policy_model_v1.py
tests/: test_action_space.py  test_catalog_parser.py  test_closed_loop_simulation.py  test_effect_model_v1.py  test_efficacy_model_v0.py  test_eval_dataset_tools.py  test_eval_runner.py  test_inference_api.py  test_learned_optimizer_integration.py  test_metrics_calculators.py  test_policy_model_v0.py  test_policy_model_v1.py  test_recommendation_baseline.py  test_reference_ingestion.py  test_rich_synthetic_longitudinal_v2.py  test_rich_synthetic_longitudinal_v3.py  test_rich_synthetic_longitudinal_v4.py  test_runtime_knowledge_db.py  test_synthetic_longitudinal.py
(+175 files in other folders)
